production/jsso2/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: jsso2
spec:
    type: ClusterIP
    clusterIP: None
    ports:
        - name: h2
          port: 4000
          targetPort: 4000
